--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -14,3 +14,7 @@ $c-etsy: #F47E28;
 $c-instagram: #EF9B48;
 
 $c-blue: #4DA1D9;
+
+$store-card--phone: 180px;
+$store-card--tablet: 220px;
+$store-card--desktop: 274px;
