--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -35,4 +35,12 @@
   #apple-gum & { background-image: url("../../img/shop/apple-gum.svg"); }
   #classic & { background-image: url("../../img/shop/classic.svg"); }
   #namastay & { background-image: url("../../img/namastay.svg"); }
+
+  //Vinyl Decal
+  #bb8-decal & { background-image: url("../../img/shop/bb8-decal.svg"); }
+  #r2d2-decal & { background-image: url("../../img/shop/r2d2-decal.svg"); }
+  #stormtrooper-decal & { background-image: url("../../img/shop/stormtrooper-decal.svg"); }
+  #texas & { background-image: url("../../img/shop/texas.svg"); }
+  #wisconsin & { background-image: url("../../img/shop/wisconsin.svg"); }
+  #golf & { background-image: url("../../img/shop/golf.svg"); }
 }
