Added paddle sticker

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2415,6 +2415,8 @@ footer {
     background-image: url("../../img/shop/classic.svg"); }
   #namastay .img {
     background-image: url("../../img/namastay.svg"); }
+  #paddles .img {
+    background-image: url("../../img/shop/paddles.svg"); }
   #bb8-decal .img {
     background-image: url("../../img/shop/bb8-decal.svg"); }
   #r2d2-decal .img {
