--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -35,6 +35,7 @@
   #apple-gum & { background-image: url("../../img/shop/apple-gum.svg"); }
   #classic & { background-image: url("../../img/shop/classic.svg"); }
   #namastay & { background-image: url("../../img/namastay.svg"); }
+  #paddles & { background-image: url("../../img/shop/paddles.svg"); }
 
   //Vinyl Decal
   #bb8-decal & { background-image: url("../../img/shop/bb8-decal.svg"); }
