--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -13,7 +13,7 @@ $c-twitter: #60B5F0;
 $c-etsy: #F47E28;
 $c-instagram: #EF9B48;
 
-$c-blue: #4DA1D9;
+$c-blue: #4AA0D4;
 
 $store-card--phone: 180px;
 $store-card--tablet: 220px;
