--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -36,6 +36,7 @@
   #classic & { background-image: url("../../img/shop/classic.svg"); }
   #namastay & { background-image: url("../../img/namastay.svg"); }
   #paddles & { background-image: url("../../img/shop/paddles.svg"); }
+  #love-all & { background-image: url("../../img/shop/love-all.svg"); }
 
   //Vinyl Decal
   #bb8-decal & { background-image: url("../../img/shop/bb8-decal.svg"); }
