--- a/styles/scss/modules/actions.scss
+++ b/styles/scss/modules/actions.scss
@@ -1,3 +1,40 @@
+@mixin button($background-color, $color) {
+  background-color: $background-color;
+  color: $color;
+  &:hover, &:focus {
+    background-color: darken($background-color, 2%);
+    color: $color;
+  }
+  &:focus {
+    background-color: darken($background-color, 10%);
+  }
+  &:active { background-color: darken($background-color, 15%); }
+  &:not(.button--transparent) {
+    .dashing-icon:before { color: $white; }
+  }
+}
+
 .button {
   @extend .button--round;
+  @include button($background-color: $c-blue, $color: $white);
+}
+
+.shop-button {
+  // border-bottom: 3px solid #3C85B1;
+  float: right;
+  // margin-top: 0.3rem;
+
+  border: 6px solid $white;
+  border-radius: 10px !important;
+  // box-shadow: rgba(70, 72, 73, 0.23) 1px 1px 2px 1px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3),
+              0 0px 1px rgba(0, 0, 0, 0.2);
+  margin: 0;
+  padding: 0.6rem 0.8rem;
+  transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+  &:hover, &:focus {
+    // box-shadow: rgba(70, 72, 73, 0.23) 1px 3px 10px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+                0 1px 5px rgba(0, 0, 0, 0.1);
+  }
 }
