--- a/styles/scss/modules/actions.scss
+++ b/styles/scss/modules/actions.scss
@@ -2,13 +2,10 @@
   background-color: $background-color;
   color: $color;
   &:hover, &:focus {
-    background-color: darken($background-color, 2%);
+    background-color: darken($background-color, 5%);
     color: $color;
   }
-  &:focus {
-    background-color: darken($background-color, 10%);
-  }
-  &:active { background-color: darken($background-color, 15%); }
+  &:active { background-color: darken($background-color, 9%); }
   &:not(.button--transparent) {
     .dashing-icon:before { color: $white; }
   }
@@ -20,21 +17,20 @@
 }
 
 .shop-button {
-  // border-bottom: 3px solid #3C85B1;
   float: right;
-  // margin-top: 0.3rem;
-
-  border: 6px solid $white;
-  border-radius: 10px !important;
-  // box-shadow: rgba(70, 72, 73, 0.23) 1px 1px 2px 1px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3),
-              0 0px 1px rgba(0, 0, 0, 0.2);
+  border: 3px solid $white;
+  border-radius: 6px !important;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.14), 0 -2px 12px rgba(0,0,0,0.1);
   margin: 0;
   padding: 0.6rem 0.8rem;
   transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-  &:hover, &:focus {
-    // box-shadow: rgba(70, 72, 73, 0.23) 1px 3px 10px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
-                0 1px 5px rgba(0, 0, 0, 0.1);
-  }
+  &:hover,
+  &:focus { box-shadow: 0 5px 8px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.2), 0 0px 8px rgba(0,0,0,0.2); }
+  &:active { box-shadow: 0 0px 3px rgba(0,0,0,0.05), 0 1px 3px rgba(0,0,0,0.14), 0 0px 4px rgba(0,0,0,0.1); }
+}
+
+.button--buy-now {
+  @include button($background-color: #82ba37, $color: $white);
+  @extend .shop-button;
+  float: left;
 }
