--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2112,6 +2112,9 @@ body {
   body.white-background {
     background-color: #FFFFFF; }
 
+.prevent-scrolling {
+  overflow: hidden; }
+
 a {
   color: #FFF;
   cursor: pointer;
@@ -2367,6 +2370,8 @@ footer {
     background-color: #69972d; }
   .button--buy-now:not(.button--transparent) .dashing-icon:before, .button--buy-now:not(.button--transparent) .app-menu .app-context .app-title .button--navigation:before, .app-menu .app-context .app-title .button--buy-now:not(.button--transparent) .button--navigation:before {
     color: #FFFFFF; }
+  .button--buy-now.disabled {
+    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.14), 0 0px 4px rgba(0, 0, 0, 0.1); }
 
 .twitter-icon {
   background-repeat: no-repeat;
@@ -2587,6 +2592,89 @@ footer {
   text-decoration: none;
   cursor: pointer; }
 
+html, body {
+  min-height: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: top center; }
+  html.modal-active, body.modal-active {
+    overflow: hidden; }
+
+#modal-container {
+  position: fixed;
+  display: table;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  transform: scale(0);
+  z-index: 1; }
+  #modal-container.three, #modal-container.four {
+    z-index: 0;
+    transform: scale(1); }
+    #modal-container.three .modal-background, #modal-container.four .modal-background {
+      background: rgba(0, 0, 0, 0.6); }
+      #modal-container.three .modal-background .modal, #modal-container.four .modal-background .modal {
+        animation: moveUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
+    #modal-container.three + .content, #modal-container.four + .content {
+      z-index: 1;
+      animation: slideUpLarge 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
+    #modal-container.three.out .modal-background .modal, #modal-container.four.out .modal-background .modal {
+      animation: moveDown 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
+    #modal-container.three.out + .content, #modal-container.four.out + .content {
+      animation: slideDownLarge 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
+  #modal-container .modal-background {
+    display: table-cell;
+    background: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    vertical-align: middle; }
+    #modal-container .modal-background .modal {
+      background: white;
+      padding: 50px;
+      display: inline-block;
+      border-radius: 3px;
+      font-weight: 300;
+      position: relative; }
+      #modal-container .modal-background .modal h2 {
+        font-size: 25px;
+        line-height: 25px;
+        margin-bottom: 15px; }
+      #modal-container .modal-background .modal p {
+        font-size: 18px;
+        line-height: 22px; }
+      #modal-container .modal-background .modal .modal-svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 3px; }
+        #modal-container .modal-background .modal .modal-svg rect {
+          stroke: #fff;
+          stroke-width: 2px;
+          stroke-dasharray: 778;
+          stroke-dashoffset: 778; }
+
+@keyframes slideUpLarge {
+  0% {
+    transform: translateY(0%); }
+  100% {
+    transform: translateY(-100%); } }
+@keyframes slideDownLarge {
+  0% {
+    transform: translateY(-100%); }
+  100% {
+    transform: translateY(0%); } }
+@keyframes moveUp {
+  0% {
+    transform: translateY(150px); }
+  100% {
+    transform: translateY(0); } }
+@keyframes moveDown {
+  0% {
+    transform: translateY(0px); }
+  100% {
+    transform: translateY(150px); } }
 h4.item-description {
   color: #95979b;
   margin-bottom: 1.7rem; }
