--- a/styles/scss/modules/actions.scss
+++ b/styles/scss/modules/actions.scss
@@ -33,4 +33,7 @@
   @include button($background-color: #82ba37, $color: $white);
   @extend .shop-button;
   float: left;
+  &.disabled {
+    box-shadow: 0 0px 3px rgba(0,0,0,0.05), 0 1px 3px rgba(0,0,0,0.14), 0 0px 4px rgba(0,0,0,0.1);
+  }
 }
