--- a/templates/shop/love-all.html
+++ b/templates/shop/love-all.html
@@ -5,7 +5,7 @@
 <div class="details-container">
   <h2>Love All<span class="item-tag">Sticker</span></h2>
   <h4 class="item-description">Let all that you do be done in love.</h4>
-  <a class="button button--buy-now disabled" href="#" target="_blank">Buy Now! · $4</a>
+  <a class="button button--buy-now" href="http://etsy.me/2xOn4qE" target="_blank">Buy Now! · $4</a>
   <ul class="item-details">
     <h4 class="item-detail--header">Details</h4>
     <li class="item-detail">High Quality Vinyl Sticker</li>
