--- a/styles/scss/modules/modal.scss
+++ b/styles/scss/modules/modal.scss
@@ -26,7 +26,7 @@
 
       @media (min-width: 760px) {
         padding: 2rem;
-        width: 20rem;
+        width: 50%;
       }
     }
 
@@ -36,7 +36,7 @@
       text-align: left;
       width: 100%;
       @media (min-width: 760px) {
-        width: 20rem;
+        width: 50%;
       }
     }
   }
@@ -44,8 +44,9 @@
 
 .img.img--modal {
   background-size: contain;
-  height: $store-card--tablet !important;
-  @media #{$tablet} { height: $store-card--desktop !important; }
+  padding: 0 0 50% 0;
+  @media #{$tablet} { padding: 0 0 40% 0; }
+  @media (min-width: 760px) { padding: 0 0 100% 0; }
 }
 
 /* Modal Content/Box */
@@ -55,7 +56,6 @@
   margin: 1rem auto;
   padding: 2rem;
   width: calc(100% - 2rem);
-  // height: calc(100% - 2rem);
   height: auto;
   text-align: center;
   position: relative;
@@ -83,6 +83,12 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#modal-content--sticker {
+  max-width: 960px;
+  margin: auto;
+  .shop-item { width: calc(33.333% - 1.3rem); }
 }
 
 //new
