--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -50,3 +50,8 @@
   .img { background-image: url("../../img/shop/image--bb8.svg"); }
   .card { background-image: url("../../img/shop/background--bb8.svg"); }
 }
+
+#us-open {
+  .img { background-image: url("../../img/shop/image--us-open.svg"); }
+  .card { background-image: url("../../img/shop/background--us-open.svg"); }
+}
