--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2465,6 +2465,11 @@ footer {
 #bb8 .card, #bb8 .card .review-link, .card #bb8 .review-link, #bb8 .help-step {
   background-image: url("../../img/shop/background--bb8.svg"); }
 
+#us-open .img {
+  background-image: url("../../img/shop/image--us-open.svg"); }
+#us-open .card, #us-open .card .review-link, .card #us-open .review-link, #us-open .help-step {
+  background-image: url("../../img/shop/background--us-open.svg"); }
+
 .hero--macbook {
   background-image: url("../../img/slate-background.jpg");
   background-repeat: repeat;
