--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -38,7 +38,7 @@
 
 #paddles {
   .img { background-image: url("../../img/shop/image--paddles.png"); }
-  .card {
+  .atvImg-layers {
     background: -webkit-linear-gradient(left top, #87C5D1, #68BBC9); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Firefox 3.6 to 15 */
