--- a/styles/scss/modules/_header.scss
+++ b/styles/scss/modules/_header.scss
@@ -2,6 +2,7 @@
   background-color: $c-gray;
   position: absolute;
   top: 0; right: 0; left: 0;
+  z-index: 1;
 
   &--logo {
     background-image: url("../../img/logo--dark.svg");
