--- a/styles/scss/modules/modal.scss
+++ b/styles/scss/modules/modal.scss
@@ -96,6 +96,7 @@
 html,body {
   min-height:100%;
   height:100%;
+  overflow-y: auto;
   background-size:cover;
   background-position:top center;
   &.modal-active { overflow: hidden; }
