--- a/styles/scss/modules/paralax.scss
+++ b/styles/scss/modules/paralax.scss
@@ -44,10 +44,10 @@ $image-radius: 20px;
 
 .atvImg-rendered-layer {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
+  width: 90%;
+  height: 90%;
+  top: 5%;
+  left: 5%;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: transparent;
