--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2451,6 +2451,54 @@ footer {
   #golf .img {
     background-image: url("../../img/shop/golf.svg"); }
 
+#bb8 .img {
+  background-image: url("../../img/shop/image--bb8.png"); }
+#bb8 .atvImg-layers {
+  background: -webkit-linear-gradient(left top, #58C09F, #30B993);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #58C09F, #30B993);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #58C09F, #30B993);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #58C09F, #30B993);
+  /* Standard syntax */ }
+
+#florida-fins .img {
+  background-image: url("../../img/shop/image--florida-fins.png"); }
+#florida-fins .atvImg-layers {
+  background: -webkit-linear-gradient(left top, #207A8A, #106C77);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #207A8A, #106C77);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #207A8A, #106C77);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #207A8A, #106C77);
+  /* Standard syntax */ }
+
+#lets-go-fishing .img {
+  background-image: url("../../img/shop/image--lets-go-fishing.png"); }
+#lets-go-fishing .atvImg-layers {
+  background: -webkit-linear-gradient(left top, #AD9471, #9D805E);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #AD9471, #9D805E);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #AD9471, #9D805E);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #AD9471, #9D805E);
+  /* Standard syntax */ }
+
+#love-all .img {
+  background-image: url("../../img/shop/image--love-all.png"); }
+#love-all .atvImg-layers {
+  background: -webkit-linear-gradient(left top, #799AA6, #5D8390);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #799AA6, #5D8390);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #799AA6, #5D8390);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #799AA6, #5D8390);
+  /* Standard syntax */ }
+
 #paddles .img {
   background-image: url("../../img/shop/image--paddles.png"); }
 #paddles .atvImg-layers {
@@ -2461,42 +2509,6 @@ footer {
   background: -moz-linear-gradient(bottom right, #87C5D1, #68BBC9);
   /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom right, #87C5D1, #68BBC9);
-  /* Standard syntax */ }
-
-#love-all .img {
-  background-image: url("../../img/shop/image--love-all.png"); }
-#love-all .card, #love-all .card .review-link, .card #love-all .review-link, #love-all .help-step {
-  background: -webkit-linear-gradient(left top, #799AA6, #5D8390);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #799AA6, #5D8390);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #799AA6, #5D8390);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #799AA6, #5D8390);
-  /* Standard syntax */ }
-
-#bb8 .img {
-  background-image: url("../../img/shop/image--bb8.png"); }
-#bb8 .card, #bb8 .card .review-link, .card #bb8 .review-link, #bb8 .help-step {
-  background: -webkit-linear-gradient(left top, #58C09F, #30B993);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #58C09F, #30B993);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #58C09F, #30B993);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #58C09F, #30B993);
-  /* Standard syntax */ }
-
-#us-open .img {
-  background-image: url("../../img/shop/image--us-open.png"); }
-#us-open .card, #us-open .card .review-link, .card #us-open .review-link, #us-open .help-step {
-  background: -webkit-linear-gradient(left top, #73C48D, #59B47A);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(bottom right, #73C48D, #59B47A);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(bottom right, #73C48D, #59B47A);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, #73C48D, #59B47A);
   /* Standard syntax */ }
 
 .hero--macbook {
@@ -2778,10 +2790,10 @@ li.item-detail {
 
 .atvImg-rendered-layer {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  width: 90%;
+  height: 90%;
+  top: 5%;
+  left: 5%;
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
