--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -36,29 +36,9 @@
   #golf & { background-image: url("../../img/shop/golf.svg"); }
 }
 
-#paddles {
-  .img { background-image: url("../../img/shop/image--paddles.png"); }
-  .atvImg-layers {
-    background: -webkit-linear-gradient(left top, #87C5D1, #68BBC9); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #87C5D1, #68BBC9); /* Standard syntax */
-  }
-}
-
-#love-all {
-  .img { background-image: url("../../img/shop/image--love-all.png"); }
-  .card {
-    background: -webkit-linear-gradient(left top, #799AA6, #5D8390); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #799AA6, #5D8390); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #799AA6, #5D8390); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #799AA6, #5D8390); /* Standard syntax */
-  }
-}
-
 #bb8 {
   .img { background-image: url("../../img/shop/image--bb8.png"); }
-  .card {
+  .atvImg-layers {
     background: -webkit-linear-gradient(left top, #58C09F, #30B993); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(bottom right, #58C09F, #30B993); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right, #58C09F, #30B993); /* For Firefox 3.6 to 15 */
@@ -66,12 +46,42 @@
   }
 }
 
-#us-open {
-  .img { background-image: url("../../img/shop/image--us-open.png"); }
-  .card {
-    background: -webkit-linear-gradient(left top, #73C48D, #59B47A); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #73C48D, #59B47A); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #73C48D, #59B47A); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, #73C48D, #59B47A); /* Standard syntax */
+#florida-fins {
+  .img { background-image: url("../../img/shop/image--florida-fins.png"); }
+  .atvImg-layers {
+    background: -webkit-linear-gradient(left top, #207A8A, #106C77); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #207A8A, #106C77); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #207A8A, #106C77); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #207A8A, #106C77); /* Standard syntax */
+  }
+}
+
+#lets-go-fishing {
+  .img { background-image: url("../../img/shop/image--lets-go-fishing.png"); }
+  .atvImg-layers {
+    background: -webkit-linear-gradient(left top, #AD9471, #9D805E); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #AD9471, #9D805E); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #AD9471, #9D805E); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #AD9471, #9D805E); /* Standard syntax */
+  }
+}
+
+#love-all {
+  .img { background-image: url("../../img/shop/image--love-all.png"); }
+  .atvImg-layers {
+    background: -webkit-linear-gradient(left top, #799AA6, #5D8390); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #799AA6, #5D8390); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #799AA6, #5D8390); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #799AA6, #5D8390); /* Standard syntax */
+  }
+}
+
+#paddles {
+  .img { background-image: url("../../img/shop/image--paddles.png"); }
+  .atvImg-layers {
+    background: -webkit-linear-gradient(left top, #87C5D1, #68BBC9); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #87C5D1, #68BBC9); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #87C5D1, #68BBC9); /* Standard syntax */
   }
 }
