--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -2108,9 +2108,7 @@ html {
   font-family: 'Lato', sans-serif; }
 
 body {
-  background-color: rgba(214, 216, 222, 0.5); }
-  body.white-background {
-    background-color: #FFFFFF; }
+  background-color: #F0F2F4; }
 
 .prevent-scrolling {
   overflow: hidden; }
@@ -2147,7 +2145,6 @@ footer {
     opacity: .3; }
 
 .content--store .card, .content--store .card .review-link, .card .content--store .review-link, .content--store .help-step {
-  background-color: #E0E1E5;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -2155,7 +2152,7 @@ footer {
   box-shadow: none;
   transition: all 0.2s ease-in-out; }
   .content--store .card:hover, .content--store .card .review-link:hover, .card .content--store .review-link:hover, .content--store .help-step:hover {
-    background-color: #56575A; }
+    background-color: #F0F2F4; }
 
 .card, .card .review-link, .help-step {
   background-color: #FFFFFF;
@@ -2300,21 +2297,20 @@ footer {
       width: calc(200% / 3); } }
 
 .header {
-  background-color: #464849;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1; }
+  background-color: #FFF;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 4rem; }
   .header--logo {
-    background-image: url("../../img/logo--dark.svg");
+    background-image: url("../../img/logo.png");
     background-repeat: no-repeat;
     background-size: 100%;
     cursor: pointer;
     height: 1.7rem;
     width: 6rem;
     float: left;
-    margin: 0.6rem 0.8rem 0 0; }
+    margin: 0 0.8rem 0 0; }
     .header--logo:hover {
       opacity: .7; }
   .header li {
@@ -2326,8 +2322,9 @@ footer {
       font-size: 1rem;
       font-weight: 600;
       margin: 0 0.2rem;
-      padding: 0.8rem;
-      text-transform: uppercase; }
+      padding: 0.3rem 0.4rem;
+      text-transform: uppercase;
+      border-radius: 3px; }
 
 .button, .file-custom .file-custom--button {
   background-color: #4AA0D4;
@@ -2385,6 +2382,22 @@ footer {
   position: absolute;
   height: 1px;
   transition: .2s ease-in-out; }
+
+.icon--tshirt,
+.icon--sticker {
+  height: 45px;
+  width: 45px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: block;
+  float: left;
+  margin-right: 0.5rem; }
+
+.icon--sticker {
+  background-image: url("../../img/shop/sticker_icon.png"); }
+
+.icon--tshirt {
+  background-image: url("../../img/shop/tshirt_icon.png"); }
 
 .icon--apple {
   background-image: url("../../img/icon--apple.svg");
@@ -2509,6 +2522,18 @@ footer {
   background: -moz-linear-gradient(bottom right, #87C5D1, #68BBC9);
   /* For Firefox 3.6 to 15 */
   background: linear-gradient(to bottom right, #87C5D1, #68BBC9);
+  /* Standard syntax */ }
+
+#k2so .img {
+  background-image: url("../../img/k2so.svg"); }
+#k2so .atvImg-layers {
+  background: -webkit-linear-gradient(left top, #FFF, #FFF);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #FFF, #FFF);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #FFF, #FFF);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, #FFF, #FFF);
   /* Standard syntax */ }
 
 .hero--macbook {
@@ -2755,9 +2780,9 @@ li.item-detail {
   width: 100%;
   height: calc(100vw/2 - 1.2rem);
   margin: 0;
-  border-radius: 20px;
+  border-radius: 3px;
   transform-style: preserve-3d;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   cursor: pointer; }
   @media all and (min-width: 40em) {
     .atvImg {
@@ -2767,14 +2792,14 @@ li.item-detail {
     margin-top: 25px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.4); }
   .atvImg img {
-    border-radius: 20px;
+    border-radius: 3px;
     box-shadow: 0 2px 8px rgba(14, 21, 47, 0.25); }
 
 .atvImg-container {
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  border-radius: 3px;
   transition: all 0.2s ease-out; }
 
 .atvImg-container.over .atvImg-shadow {
@@ -2784,7 +2809,7 @@ li.item-detail {
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  border-radius: 3px;
   overflow: hidden;
   transform-style: preserve-3d; }
 
@@ -2800,22 +2825,13 @@ li.item-detail {
   background-size: cover;
   transition: all 0.1s ease-out; }
 
-.atvImg-shadow {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  width: 90%;
-  height: 90%;
-  transition: all 0.2s ease-out;
-  box-shadow: 0 8px 30px rgba(14, 21, 47, 0); }
-
 .atvImg-shine {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 20px;
+  border-radius: 3px;
   background: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 40%); }
 
 .hero {
@@ -2859,6 +2875,7 @@ li.item-detail {
         height: 25rem;
         width: 38rem; } }
   .content.content--store {
+    overflow: hidden;
     text-align: center; }
 
 .section.section--review {
@@ -2887,36 +2904,55 @@ li.item-detail {
 .body--store .content {
   text-align: center; }
 
+.shop-item-inner {
+  background-color: #FFFFFF;
+  border: 1px solid #EBECEF;
+  border-radius: 3px;
+  margin: 0.3rem; }
+  .shop-item-inner img {
+    width: 90%; }
+
 .shop-item {
+  background-color: #FFFFFF;
+  border: 1px solid #EBECEF;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(163, 163, 163, 0.15);
+  cursor: pointer;
   display: inline-block;
   margin: 0 0.5rem 2rem 0.5rem;
-  width: calc(50% - 1.2rem); }
+  text-align: center;
+  width: 80%;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
   @media all and (min-width: 40em) {
     .shop-item {
+      width: calc(50% - 1.2rem); } }
+  @media all and (min-width: 64em) {
+    .shop-item {
       width: calc(33.333% - 1.2rem); } }
+  .shop-item:hover {
+    -webkit-transform: scale(1.02, 1.02);
+    transform: scale(1.02, 1.02);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); }
+    .shop-item:hover img {
+      -webkit-transform: scale(1.05, 1.05);
+      transform: scale(1.05, 1.05);
+      -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
   .shop-item .shop-item--title {
-    display: flex;
-    float: left;
-    max-width: 7rem;
-    text-align: left;
-    white-space: nowrap; }
-    @media all and (min-width: 40em) {
-      .shop-item .shop-item--title {
-        max-width: 10rem; } }
+    display: block; }
     .shop-item .shop-item--title p {
-      float: left;
       font-weight: 600;
-      color: #5B5D5D;
+      font-size: 23px;
+      color: #212121;
       padding: 0.2rem 0.5rem 0.2rem 0;
       margin: 0;
       text-overflow: ellipsis;
       overflow: hidden; }
   .shop-item .shop-item--price {
-    background-color: rgba(167, 211, 238, 0.6);
-    float: right;
+    color: #B3B7C6;
     font-weight: 600;
     padding: 0.2rem 0.5rem;
-    border-radius: 5px;
     margin: 0; }
 
 .shop-header {
