--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -50,7 +50,10 @@ $card-count: 5;
     }
   }
 
-  &.content--store { text-align: center; }
+  &.content--store {
+    overflow: hidden;
+    text-align: center;
+  }
 }
 
 .section {
@@ -87,23 +90,52 @@ $card-count: 5;
   text-align: center;
 }
 
+.shop-item-inner {
+  background-color: #FFFFFF;
+  border: 1px solid #EBECEF;
+  border-radius: 3px;
+  margin: 0.3rem;
+
+  img {
+    width: 90%;
+  }
+}
+
 .shop-item {
+  background-color: #FFFFFF;
+  border: 1px solid #EBECEF;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(163,163,163,0.15);
+  cursor: pointer;
   display: inline-block;
   margin: 0 0.5rem 2rem 0.5rem;
-  width: calc(50% - 1.2rem);
-  @media #{$tablet} { width: calc(33.333% - 1.2rem); }
+  text-align: center;
+  width: 80%;
+  @media #{$tablet} { width: calc(50% - 1.2rem); }
+  @media #{$desktop} { width: calc(33.333% - 1.2rem); }
+
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+  &:hover {
+    -webkit-transform: scale(1.02, 1.02);
+    transform: scale(1.02, 1.02);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+
+    img {
+      -webkit-transform: scale(1.05, 1.05);
+      transform: scale(1.05, 1.05);
+      -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    }
+  }
 
   .shop-item--title {
-    display: flex;
-    float: left;
-    max-width: 7rem;
-    text-align: left;
-    white-space: nowrap;
-    @media #{$tablet} { max-width: 10rem; }
+    display: block;
     p {
-      float: left;
       font-weight: 600;
-      color: #5B5D5D;
+      font-size: 23px;
+      color: #212121;
       padding: 0.2rem 0.5rem 0.2rem 0;
       margin: 0;
       text-overflow: ellipsis;
@@ -111,11 +143,9 @@ $card-count: 5;
     }
   }
   .shop-item--price {
-    background-color: rgba(167, 211, 238, 0.6);
-    float: right;
+    color: #B3B7C6;
     font-weight: 600;
     padding: 0.2rem 0.5rem;
-    border-radius: 5px;
     margin: 0;
   }
 }
