--- a/styles/scss/modules/_illustration.scss
+++ b/styles/scss/modules/_illustration.scss
@@ -85,3 +85,13 @@
     background: linear-gradient(to bottom right, #87C5D1, #68BBC9); /* Standard syntax */
   }
 }
+
+#k2so {
+  .img { background-image: url("../../img/k2so.svg"); }
+  .atvImg-layers {
+    background: -webkit-linear-gradient(left top, #FFF, #FFF); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #FFF, #FFF); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #FFF, #FFF); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, #FFF, #FFF); /* Standard syntax */
+  }
+}
